# lab_2_ak

./: CMakeList.txt  CMakeLists.txt  Makefile  README.md
src/: calculator.cpp  calculator.h  main.cpp
